force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/fields/Apttus_Proposal__Proposal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>R00N70000001yUfJEAU</relationshipName>
    <type>Lookup</type>
</CustomField>