force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/fields/Apttus_Proposal__Result_Date__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Result_Date__c</fullName>
    <label>Result Date</label>
    <type>Date</type>
</CustomField>