force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/listViews/Apttus_Proposal__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Proposal__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>